Navbar items align issue fixed

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -1,16 +1,11 @@
 .nav-link {
     text-transform: lowercase;
-
-    &:hover{
-        text-decoration: underline 1px $text-black;
-        text-underline-offset: 0.25rem;
-    } 
+    display: flex;
+    align-items: center;
 }
 
 .nav-item.active {
     font-weight: 700;
-    text-decoration: underline 1px $text-black;
-    text-underline-offset: 0.25rem;
 }
 
 .navbar-toggler{
@@ -23,4 +18,8 @@
     svg{
         fill: $text-black;
     }
+}
+
+#theme-toggler:before{
+    height: 1.5rem;
 }
